# cDNA_Cupcake

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  3.8  CHANGELOG.md  Dockerfile  LICENSE.md  MANIFEST.in  Pipfile  README.md  README.rst  Untitled.ipynb  build.py  old_setup.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: black.yml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  bdb.data.json  bdb.meta.json  bisect.data.json  bisect.meta.json  builtins.data.json  builtins.meta.json  cmd.data.json  cmd.meta.json  codecs.data.json  codecs.meta.json  csv.data.json  csv.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  fileinput.data.json  fileinput.meta.json  functools.data.json  functools.meta.json  (+60 more)
SequelQC/: RCvalidate_smrtlink_isoseq.py  RCvalidate_smrtlink_isoseq_mm10.py  RCvalidate_tofu2_isoseq.py  SIRVvalidate_smrtlink_isoseq.py  SIRVvalidate_tofu2_isoseq.py  SMRTLink_stats_isoseq.py  __init__.py
annotation/: __init__.py  alignment_stats_from_sam.py  make_file_for_subsampling_from_collapsed.py  parse_matchAnnot.py  subsample.py  subsample_with_category.py
bacteria/: match_w_annotation.py
cdna_cupcake/SequelQC/: SIRVvalidate_smrtlink_isoseq.py  SMRTLink_stats_isoseq.py
cdna_cupcake/annotation/: alignment_stats_from_sam.py  make_file_for_subsampling_from_collapsed.py  parse_matchAnnot.py  subsample_with_category.py
cdna_cupcake/bacteria/: match_w_annotation.py
cdna_cupcake/cupcake/: __init__.py
cdna_cupcake/phasing/: create_fake_genome.py  simulate_phasing_data_from_fasta.py  snps_to_vcf.py
cdna_cupcake/post_isoseq_cluster/: demux_by_barcode_for_subsampling.py  demux_by_barcode_groups.py  demux_isoseq2_no_genome.py  demux_isoseq_no_genome.py  demux_isoseq_with_genome.py
cdna_cupcake/sequence/: calc_expected_accuracy_from_fastq.py  err_correct_w_genome.py  filter_lq_isoforms.py  get_gffs_from_list.py  group_ORF_sequences.py  randomly_select_sequences.py  sam_to_bam.py  sam_to_collapsed_gff.py  sam_to_gff3.py  summarize_gmap_sam.py
cdna_cupcake/simulate/: simulate.py
cdna_cupcake/singlecell/: UMI_BC_error_correct.py  clip_out_UMI_cellBC.py  collate_FLNC_gene_info.py  dedup_FLNC_per_cluster.py
cdna_cupcake/targeted/: calc_probe_hit_from_sam.py
cupcake/: __about__.py  __init__.py
cupcake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cupcake/SequelQC/: RCvalidate_smrtlink_isoseq.py  RCvalidate_smrtlink_isoseq_mm10.py  RCvalidate_tofu2_isoseq.py  SIRVvalidate_smrtlink_isoseq.py  SIRVvalidate_tofu2_isoseq.py  SMRTLink_stats_isoseq.py  SMRTLink_subread_stats.py  __init__.py
cupcake/annotation/: __init__.py  alignment_stats_from_sam.py  make_file_for_subsampling_from_collapsed.py  parse_matchAnnot.py  subsample.py  subsample_with_category.py
cupcake/bacteria/: match_w_annotation.py
cupcake/beta/: trim_primers.py
cupcake/cupcake/: __init__.py
cupcake/cupcake2/: __init__.py
cupcake/ice/: __init__.py  find_ECE.c  ice_align_core.py  setup2.py
cupcake/io/: BioReaders.py  GFF.py  SeqReaders.py  __init__.py
cupcake/phasing/: __init__.py  create_fake_genome.py  run_phaser.py  simulate_phasing_data_from_fasta.py  snps_to_vcf.py
cupcake/post_isoseq_cluster/: __init__.py  demux_by_barcode_for_subsampling.py  demux_by_barcode_groups.py  demux_isoseq2_no_genome.py  demux_isoseq_no_genome.py  demux_isoseq_with_genome.py
cupcake/sequence/: BED.py  BioReaders.py  STAR.py  SeqReaders.py  __init__.py  calc_expected_accuracy_from_fastq.py  coordinate_mapper.py  err_correct_w_genome.py  fa2fq.py  filter_lq_isoforms.py  fq2fa.py  get_gffs_from_list.py  get_seq_stats.py  get_seqs_from_list.py  group_ORF_sequences.py  randomly_select_sequences.py  revcomp.py  sam_to_bam.py  sam_to_collapsed_gff.py  sam_to_gff3.py  summarize_gmap_sam.py
cupcake/simulate/: simulate.py
cupcake/singlecell/: UMI_BC_error_correct.py  __init__.py  clip_out_UMI_cellBC.py  cluster_by_UMI_mapping.py  collate_FLNC_gene_info.py  dedup_FLNC_per_cluster.py
cupcake/targeted/: calc_probe_hit_from_sam.py
cupcake/test_data/: cluster_report.csv.REMOVED.git-id  hq_isoforms.fastq.REMOVED.git-id  hq_isoforms.fastq.sorted.sam.REMOVED.git-id  test.collapsed.min_fl_2.filtered.rep.fq.REMOVED.git-id  test.collapsed.read_stat.txt.REMOVED.git-id  test.collapsed.rep.fq  test.collapsed.rep.fq.REMOVED.git-id
cupcake/tofu/: __init__.py  collapse_isoforms_by_sam.py  compare_junctions.py  filter_away_subset.py  filter_by_count.py  filter_monoexon.py  fusion_finder.py  get_abundance_post_collapse.py  get_counts_by_barcode.py  utils.py
cupcake2/: __init__.py
cupcake2/ice2/: AlignerRunners.py  IceAllPartials2.py  IceArrow2.py  (+10 more)
docker/: Dockerfile
phasing/: __init__.py  create_fake_genome.py  run_phaser.py  simulate_phasing_data_from_fasta.py  snps_to_vcf.py
post_isoseq_cluster/: __init__.py  demux_by_barcode_for_subsampling.py  demux_by_barcode_groups.py  demux_isoseq2_no_genome.py  demux_isoseq_no_genome.py  demux_isoseq_with_genome.py
sequence/: BED.py  BioReaders.py  STAR.py  STARwrapper.py  SeqReaders.py  __init__.py  calc_expected_accuracy_from_fastq.py  coordinate_mapper.py  err_correct_w_genome.py  fa2fq.py  filter_lq_isoforms.py  fq2fa.py  get_gffs_from_list.py  get_seq_stats.py  get_seqs_from_list.py  group_ORF_sequences.py  randomly_select_sequences.py  sam_to_bam.py  sam_to_collapsed_gff.py  sam_to_gff3.py  summarize_gmap_sam.py
simulate/: __init__.py  simulate.py
singlecell/: UMI_BC_error_correct.py  __init__.py  clip_out_UMI_cellBC.py  cluster_by_UMI_mapping.py  collate_FLNC_gene_info.py  dedup_FLNC_per_cluster.py
targeted/: __init__.py  calc_probe_hit_from_sam.py
test_data/: test.subreads.bam.REMOVED.git-id
(+613 files in other folders)
