[tool.poetry]
name = "cupcake"
version = "19.0.2"
description = "Miscellaneous collection of Python and R scripts for processing Iso-Seq data"
authors = ["Elizabeth Tseng <etseng@pacb.com>"]
license = "BSD3"
homepage = "https://github.com/Magdoll/cDNA_Cupcake"
repository = "https://github.com/Magdoll/cDNA_Cupcake"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["isoseq", "rnaseq", "pacbio", "long reads"]
readme = "README.md"
# packages = [
#     # {include = "src/cupcake"},
#     {include = "tests/test_data/*.*", format = "sdist"},
#     ]
include = [
    # C extensions must be included in the wheel distributions
    {path = "src/cupcake/tofu/branch/*.pyx", format = "wheel"},
    {path = "src/cupcake/tofu/branch/*.c", format = "wheel"},
    {path = "src/cupcake/tofu/branch/*.so", format = "wheel"},
    {path = "src/cupcake/tofu/branch/*.pyd", format = "wheel"},
]

[tool.poetry.urls]
"bug tracker" = "https://github.com/Magdoll/cDNA_Cupcake/issues"

[tool.poetry.dependencies]
python = "~3.7.1"
numpy = "^1.20.1"
biopython = "^1.78"
bx-python = "^0.8.9"
pandas = "^1.2.2"
Cython = "^0.29.21"
scikit-learn = "^0.24.1"
pysam = "^0.16.0"
bcbio-gff = "^0.6.6"
pyvcf = "*"
# pyvcf = {git = "https://github.com/milescsmith/PyVCF"}
pbcommand = {git = "https://github.com/PacificBiosciences/pbcommand"}
pbcore = {git = "https://github.com/PacificBiosciences/pbcore"}
pbcoretools = {git = "https://github.com/PacificBiosciences/pbcoretools"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.20.0"
pylint = "^2.6.2"
flake8 = "^3.8.4"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
evaluate_alignment_sam      = "cupcake.annotation.alignment_stats_from_sam:main"
make_file_for_subsample     = "cupcake.annotation.make_file_for_subsampling_from_collapsed:main"
parse_matchAnnot            = "cupcake.annotation.parse_matchAnnot:main"
subsample_with_category     = "cupcake.annotation.subsample_with_category:main"
subsample                   = "cupcake.annotation.subsample:main"
# tofu submodule
collapse_isoforms_by_sam    = "cupcake.tofu.collapse_isoforms_by_sam:main"
get_abundance_post_collapse = "cupcake.tofu.get_abundance_post_collapse:main"
filter_by_count             = "cupcake.tofu.filter_by_count:main"
filter_away_subset          = "cupcake.tofu.filter_away_subset:main"
fusion_finder               = "cupcake.tofu.fusion_finder:main"
chain_samples               = "cupcake.tofu.counting.chain_samples:main"
chain_fusion_samples        = "cupcake.tofu.counting.chain_fusion_samples:main"
summarize_junctions         = "cupcake.tofu.counting.summarize_sample_GFF_junctions:main"
scrub_sample_GFFs           = "cupcake.tofu.counting.scrub_sample_GFF_junctions:main"
# uh phasing! are we still doing phasing?
make_fake_genome            = "cupcake.phasing.create_fake_genome:main"
simple_stats_post_collapse  = "cupcake.tofu.simple_stats_post_collapse:main"
fusion_collate_info         = "cupcake.tofu.fusion_collate_info:main"
color_bed12_post_sqanti     = "cupcake.tofu.color_bed12_post_sqanti:main"
run_phaser                  = "cupcake.phasing.run_phaser:main"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"